--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-scrolllock": "^5.0.1",
     "react-svg": "^13.0.6",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-rational-order": "^0.1.2",
