--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive-picture": "^3.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-scrolllock": "^5.0.1",
     "react-svg": "^13.0.6",
     "react-tooltip": "^4.2.21",
