--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.4",
     "react-responsive-picture": "^3.2.2",
     "react-router-dom": "^5.2.0",
